# rust-movies

./: Cargo.toml  build.rs
proto/: movie.proto
src/: main.rs
